--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,11 +6,11 @@
             <form role="form">
                 <div class="form-content">
                     <div class="form-group">
-                        <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="Email">
+                        <input type="text" ng-model="username" class="form-control input-underline input-lg" id="" placeholder="Email">
                     </div>
 
                     <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
+                        <input type="password" ng-model="password" class="form-control input-underline input-lg" id="" placeholder="Password">
                     </div>
                 </div>
                 <a class="btn rounded-btn" [routerLink]="['/product']" (click)="onLoggedin()"> Log in </a>
